<?xml version="1.0"?>
<package format="2">
  <name>px4_control</name>
  <version>0.0.0</version>
  <description>The px4_control package</description>

  <maintainer email="fatmoonqyp@126.com">Yuhua Qi</maintainer>
  <author email="fatmoonqyp@126.com">Yuhua Qi</author>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>mavros</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <exec_depend>mavros</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>tf2_eigen</build_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <exec_depend>tf2_eigen</exec_depend>

  <build_depend>mavros_msgs</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <build_depend>prometheus_msgs</build_depend>
  <build_export_depend>prometheus_msgs</build_export_depend>
  <exec_depend>prometheus_msgs</exec_depend>


  <export>

  </export>
</package>
